[style] fix jumping scrollbar + aside card margin

--- a/app/styles/components/_channel-card.scss
+++ b/app/styles/components/_channel-card.scss
@@ -117,6 +117,7 @@ $card-wide-cover-size: 4.8rem;
 	.ChannelCard-title {
 		margin-top: auto;
 		margin-bottom: auto;
+		word-break: inherit;
 	}
 	.ChannelCard-body {
 		display: none;
