--- a/app/styles/layout/_layout.scss
+++ b/app/styles/layout/_layout.scss
@@ -20,7 +20,7 @@ body {
 	height: 100vh;
 	width: 100%;
 	transition: padding 200ms $easing;
-	overflow-y: auto;
+	overflow-y: scroll;
 	flex: 2;
 	// More padding when player is taller..
 	// @media (max-width: 570px) {
